Java 21 (#7222)
* Java version and Java API changes

Signed-off-by: Tomas Langer <tomas.langer@oracle.com>

* Remove --enable-preview from everywhere

Signed-off-by: Tomas Langer <tomas.langer@oracle.com>

* Byte buddy support for Java 21 EA

Signed-off-by: Tomas Langer <tomas.langer@oracle.com>

* Use random port even when setup sets explicit one in tests

Signed-off-by: Tomas Langer <tomas.langer@oracle.com>

* Update spotbugs plugin to work with Java 21

Signed-off-by: Tomas Langer <tomas.langer@oracle.com>

* Fix JPA issues, rollback to original JPA version.

Signed-off-by: Tomas Langer <tomas.langer@oracle.com>

* Skip Jlink tests - need new version of build tools

Signed-off-by: Tomas Langer <tomas.langer@oracle.com>

* Script fix

Signed-off-by: Tomas Langer <tomas.langer@oracle.com>

* Use a deterministic version  for setup-java: v1.3.1 instead of v1

---------

Signed-off-by: Tomas Langer <tomas.langer@oracle.com>
Co-authored-by: Romain Grecourt <romain.grecourt@oracle.com>